--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@
 <body>
   <div id="chat-container">
     <div id="search-container">
+      <input type='text' placeholder="Meklēt" /> 
 
     </div>
     <div id="conversation-list">
 
     </div>
     <div id="new-message-container">
+        <a href="#">+</a>
 
     </div>
     <div id="chat-title">
+        <span>Čats</span>
+        <img src="trash_can_23.svg" alt="Delete Conversation" />
 
     </div>
     <div id="chat-message-list">
 
     </div>
     <div id="chat-form">
+      <img src="images/icons/attachment-logo.svg" alt='Add attachment' />
+      <input type='text' placeholder="uzrakstīt ziņu" />
 
       </div>
   </div>
